--- a/pages/home.html
+++ b/pages/home.html
@@ -3,7 +3,22 @@
 <div id="background" class="row">
     <img class="logo-img" src="/assets/logo.png" alt="">
     <div id="left-menu" class="col s12 m7 l7">
-
+            <div class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/football.svg" alt="">
+                    <h3>Matches</h3>
+                    </div> 
+                </div>
+            </div>
+            <div class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/sports.svg" alt="">
+                    <h3>Schedule</h3>
+                    </div> 
+                </div>
+            </div>
     </div>
     <div id="right-image" class="col s12 m5 l5">
         <img src="/assets/mbappe.png" alt="" class="player" id="p1">
