--- a/pages/home.html
+++ b/pages/home.html
@@ -19,6 +19,15 @@
                     </div> 
                 </div>
             </div>
+
+            <div class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/statistics.svg" alt="">
+                    <h3>Statistics</h3>
+                    </div> 
+                </div>
+            </div>
     </div>
     <div id="right-image" class="col s12 m5 l5">
         <img src="/assets/mbappe.png" alt="" class="player" id="p1">
