--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/home.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="theme-color" content="#212121">
     <title>UEFA 2020</title>
@@ -28,7 +29,52 @@
 
 <!-- Akhir Navigasi -->
 
+<!-- main menu -->
 
+<div id="background" class="row">
+    <img class="logo-img" src="/assets/logo.png" alt="">
+    <div id="left-menu" class="col s12 m7 l7">
+            <div id="matches" class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/football.svg" alt="">
+                    <h3>Matches</h3>
+                    </div> 
+                </div>
+            </div>
+            <div class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/sports.svg" alt="">
+                    <h3>Schedule</h3>
+                    </div> 
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/statistics.svg" alt="">
+                    <h3>Statistics</h3>
+                    </div> 
+                </div>
+            </div>
+    </div>
+    <div id="right-image" class="col s12 m5 l5">
+        <img src="/assets/mbappe.png" alt="" class="player" id="p1">
+        <img src="/assets/cr.png" alt="" class="player" id="p2">
+        <img src="/assets/dijk.png" alt="" class="player" id="p3">
+        <img src="/assets/lv.png" alt="" class="player" id="p4">
+        <img src="/assets/Messi.png" alt="" class="player" id="p5">
+    </div>
+</div>
+
+
+
+
+
+
+<!-- akhir main menu -->
 <div class="container" id="body-content"></div>
 
 
