--- a/content.html
+++ b/content.html
@@ -51,7 +51,8 @@
         console.log("Service Worker tidak dapat berjalan di browser ini :(")
     }
     document.addEventListener('DOMContentLoaded', function() {
-       getParticularMatch()
+      getParticularMatch();
+      
 });
 
 
