teams page remaining to fix

--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
 
 <!-- Akhir Navigasi -->
 
-<div class="container" id="body-content"></div>
+<div class="main-content container" id="body-content"></div>
 
 
 <!-- Koding Fungsi -->
@@ -51,7 +51,7 @@
         console.log("Service Worker tidak dapat berjalan di browser ini :(")
     }
     document.addEventListener('DOMContentLoaded', function() {
-      getParticularMatch();
+      getAllTeam()
       
 });
 
