--- a/nav.html
+++ b/nav.html
@@ -1,4 +1,6 @@
-<li><a class="waves-effect" href="#home">Utama</a></li>
-<li><a class="waves-effect" href="#howto">Caranya</a></li>
-<li><a class="waves-effect" href="#about">Tentang</a></li>
-<li><a class="waves-effect" href="#contact">Kontak</a></li>
+<li><a class="waves-effect" href="#home">Home</a></li>
+<li><a class="waves-effect" href="#matches">Matches</a></li>
+<li><a class="waves-effect" href="#standings">Standings</a></li>
+<li><a class="waves-effect" href="#teams">Teams</a></li>
+<li><a class="waves-effect" href="#saved">Saved</a></li>
+
