--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,40 @@
-<div class="content container">
-    <div class="row">
-        <p>Test</p>
+<div id="background" class="row">
+    <img class="logo-img" src="/assets/logo.png" alt="">
+    <div id="left-menu" class="col s12 m7 l7">
+            <div onclick="getMatches()" id="matches" class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/football.svg" alt="">
+                    <h3>Matches</h3>
+                    </div> 
+                </div>
+            </div>
+            <div onclick="getStandings()" id='standings' class="card">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/sports.svg" alt="">
+                    <h3>Standings</h3>
+                    </div> 
+                </div>
+            </div>
+
+            <div onclick="getAllTeam()" id='teams' class="card">
+                <a href="./content.html">
+                <div class="face">
+                    <div class="content">
+                        <img src="/assets/statistics.svg" alt="">
+                    <h3>Teams</h3>
+                    </div> 
+                </div>
+            </div>
+        </a>
     </div>
-</div>
+    <div id="right-image" class="col s12 m5 l5">
+        <img src="/assets/mbappe.png" alt="" class="player" id="p1">
+        <img src="/assets/cr.png" alt="" class="player" id="p2">
+        <img src="/assets/dijk.png" alt="" class="player" id="p3">
+        <img src="/assets/lv.png" alt="" class="player" id="p4">
+        <img src="/assets/Messi.png" alt="" class="player" id="p5">
+    </div>
+
+    </div>
