push api is under work

--- a/pages/teams.html
+++ b/pages/teams.html
@@ -1,67 +1,4 @@
-<div class="scard-container">
-    <h3>Group A</h3>
-    <table>
-        <thead>
-            <th>Team Name</th>
-            <th>Points</th>
-            <th>GP</th>
-            <th>W</th>
-            <th>L</th>
-            <th>D</th>
-            <th>GF</th>
-            <th>GA</th>
-            <th>GD</th>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Tim 1</td>
-                <td>6</td>
-                <td>2</td>
-                <td>2</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-                <td>0</td>
-            </tr>
-
-            <tr>
-                <td>Tim 2</td>
-                <td>6</td>
-                <td>2</td>
-                <td>2</td>
-                <td>0</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                
-            </tr>
-
-            <tr>
-                <td>TIm 3</td>
-                <td>6</td>
-                <td>2</td>
-                <td>2</td>
-                <td>0</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
-                <td>Tim 4</td>
-                <td>6</td>
-                <td>2</td>
-                <td>2</td>
-                <td>0</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-            
-        </tbody>
-    </table>
+<link rel="stylesheet" href="../content.css">
+<div class="row" id="team-list">
+   
 </div>
