responsive view finished, caching needed

--- a/team.html
+++ b/team.html
@@ -19,10 +19,10 @@
         <div class="nav-wrapper container">
             <a href="./index.html"  class ="brand-logo" id="logo-container">Team Detail</a>
             <a href="#" class="sidenav-trigger" data-target="nav-mobile" >
-                <i class="material-icons">menu</i></a>
+                <i onclick="history.back()" class="material-icons">arrow_left</i></a>
             </a>
-            <!-- <ul class="topnav right hide-on-med-and-down"></ul>
-            <ul class="sidenav" id="nav-mobile"></ul> -->
+            <!-- <ul class="topnav right hide-on-med-and-down"></ul> -->
+            <!-- <ul class="sidenav" id="nav-mobile"></ul> -->
         </div>
     </nav>
 
