--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <!DOCTYPE html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="manifest" href="/manifest.json">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="UEFA 2020">
     <link rel="stylesheet" href="css/materialize.min.css">
-    <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="/css/home.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="theme-color" content="#212121">
     <title>UEFA 2020</title>
-    
+    <link rel="icon" type="image/png" href="/logo256.png"/>
+    <link rel="icon" sizes="192x192" href="/logo192.png">
+    <link rel="icon" sizes="256x256" href="/logo256.png">
+    <link rel="icon" sizes="512x512" href="/logo512.png">
 
 </head>
 <body>
